fixed footer to be position properly...credited stackoverflow

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -1,3 +1,7 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
 .container {
   .header {
     .nav {
@@ -11,6 +15,9 @@
     }
   }
   .footer {
+    position: absolute;
+    bottom: 0;
+    width: 95%;
     ul {
       list-style: none;
       li {
@@ -21,3 +28,4 @@
     }
   }
 }
+//position footer at bottom of page from http://stackoverflow.com/questions/21324395/bootstrap-3-flush-footer-to-bottom-not-fixed
